--- a/.github/workflows/task2.yml
+++ b/.github/workflows/task2.yml
@@ -3,15 +3,37 @@ on:
   push:
     paths:
       - 'desktop-app/**.ts'
+defaults:
+  run:
+    working-directory: desktop-app
 jobs:
-  example-job:
+  e2e-tests:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4  #clone the repo and the latest branchl
-      - uses: actions/setup-node@v4 
-        with: 
-          node-version: "latest"
-      - run: |
-          cd desktop-app
-          npm ci
-          npm test
+      - name: Checkout code
+        uses: actions/checkout@v4
+      - name: Use Node.js LTS
+        uses: actions/setup-node@v4
+        with:
+          node-version: "lts/*"
+          cache: "npm"
+          cache-dependency-path: desktop-app
+      - name: Install dependencies
+        run: npm ci
+      - name: Run e2e tests
+        id: e2e
+        run: xvfb-run --auto-servernum --server-args="-screen 0 1280x960x24" -- npm run e2e
+      - name: Archive test results
+        id: upload-screenshots
+        if: ${{ failure() && steps.e2e.conclusion == 'failure' }}
+        uses: actions/upload-artifact@v4
+        with:
+          name: e2e-test-results
+          path: desktop-app/test-results
+          retention-days: 7
+      - run:  echo 'Screenshots available "at ${{ steps.upload-screenshots.outputs.artifact-url }}'
+        if: ${{ failure() && steps.e2e.conclusion == 'failure' }}
+
+
+
+  
